[add] error process activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <integer name="trasition_duration">500</integer>
     <string name="title_activity_enroll">EnrollActivity</string>
     <string name="title_activity_open">OpenActivity</string>
+    <string name="title_activity_error_process">ErrorProcessActivity</string>
 </resources>
